add backend uri

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -437,6 +437,7 @@
         <path id="Path_19" data-name="Path 19" d="M4137.529,1027.283l-7.7-3.723,4.417-2.721,7.753,3.723Z" transform="translate(-4125.003 -1015.199)" fill="#fff"/>
       </svg>
     </a>
+    <h2>{{greeting}}</h2>
 
     <a class="circle-link" title="CLI" href="https://cli.angular.io/" target="_blank" rel="noopener">
       <svg alt="Angular CLI Logo" xmlns="http://www.w3.org/2000/svg" width="21.762" height="23.447" viewBox="0 0 21.762 23.447">
