--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -42,6 +42,24 @@
                     </div>
                 </mat-card-content>
             </mat-card>
+
+            <mat-card>
+                    <mat-card-title>
+                        Cutting PSA- it hurts
+                    </mat-card-title>
+                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/zUDpdSu2PGQ"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                            <mat-card-content>
+    
+                        <div class="row">
+                            <div class="col-sm-10 offset-md-1">
+                                Departure so attention pronounce satisfied daughters am. But shy tedious pressed studied opinion entered windows off. Advantage dependent suspicion convinced provision him yet. Timed balls match at by rooms we. Fat not boy neat left had with past here call. Court nay merit few nor party learn. Why our year her eyes know even how. Mr immediate remaining conveying allowance do or.
+                            </div>
+                        </div>
+                    </mat-card-content>
+                </mat-card>
         </div>
     </div>
 </div>
