--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -10,11 +10,11 @@
             <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
         </form>
         <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+            <li class="nav-item" routerLink="/edit-profile">
+              <a class="nav-link">Login</a>
             </li>
             <li class="nav-item">
-                    <a class="nav-link" href="#">Sign Up</a>
+              <a class="nav-link" href="#">Sign Up</a>
             </li>
               <!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
