--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class="row justify-content-center" *ngIf="profileForm">
     <div class="col-sm-10">
         <mat-card>
             <mat-card-title>Create your Profile:</mat-card-title>
