--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -1,4 +1,10 @@
+
 <div class="container">
+    <div class="row justify-content-end">
+            <div class="col-sm-2">
+                <a mat-raised-button routerLink="edit">Edit Profile</a>
+            </div>
+        </div>
     <div class="row justify-content-center">
         <div class="col-sm-12 col-md-10">
             <mat-card *ngIf="videographer">
@@ -15,11 +21,7 @@
                                 alt="{{videographer.firstName + ' ' + videographer.lastName}}" class="avatar" />
                         </div>
                         <div class="col-sm-12 col-md-9">
-                            Bio here: Departure so attention pronounce satisfied daughters am. But shy tedious pressed
-                            studied opinion entered windows off. Advantage dependent suspicion convinced provision him
-                            yet. Timed balls match at by rooms we. Fat not boy neat left had with past here call. Court
-                            nay merit few nor party learn. Why our year her eyes know even how. Mr immediate remaining
-                            conveying allowance do or.
+                            {{videographer.bio}}
                         </div>
                     </div>
                 </mat-card-content>
