--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -5,33 +5,16 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <!-- <form class="form-inline my-2 my-lg-0 ml-auto">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form> -->
     <ul class="navbar-nav ml-auto">
-
-      <li class="nav-item" routerLink="/edit-profile">
-        <a class="nav-link">Login</a>
+      <li class="nav-item" *ngIf="auth.can('post:videographer')" routerLink="/edit-profile">
+          <a class="nav-link">Add Profile</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sign Up</a>
+        <a class="nav-link" *ngIf="!auth.activeJWT()" [href]="loginURL">Login</a>
       </li>
-      <!-- <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-              </li> -->
+      <li class="nav-item">
+          <a class="nav-link" *ngIf="auth.activeJWT()" (click)="auth.logout()">Log Out</a>
+        </li>
     </ul>
-
   </div>
 </nav>
