--- a/src/app/pages/videographer-list/videographer-list.component.html
+++ b/src/app/pages/videographer-list/videographer-list.component.html
@@ -15,12 +15,13 @@
             </mat-card-header>
             <mat-card-content>
                 <mat-list>
-                        <mat-list-item *ngFor="let vg of videographers" class="pointer" routerLink="{{getLink(vg)}}">
-                          <img matListAvatar src="{{ vg.profilePictureUrl}}" alt="{{vg.firstName + ' ' + vg.lastName}}">
-                          <h3 matLine> {{vg.firstName + ' ' + vg.lastName}} </h3>
+                        <mat-list-item *ngFor="let vg of videographers" class="pointer">
+                          <img  routerLink="{{getLink(vg)}}" matListAvatar src="{{ vg.profilePictureUrl}}" alt="{{vg.firstName + ' ' + vg.lastName}}">
+                          <h3 routerLink="{{getLink(vg)}}" matLine> {{vg.firstName + ' ' + vg.lastName}} </h3>
                           <p matLine>
                                 <span> {{vg.location}} </span>
                             </p>
+                            <mat-icon *ngIf="auth.can('post:videographer')" aria-hidden="false" aria-label="Example delete icon">delete</mat-icon>
                         </mat-list-item>
                 </mat-list>                
             </mat-card-content>
