--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -1,7 +1,8 @@
 <div class="row justify-content-center" *ngIf="profileForm">
     <div class="col-sm-10">
         <mat-card>
-            <mat-card-title>Create your Profile:</mat-card-title>
+            <mat-card-title *ngIf="!videogoo">Create a Profile:</mat-card-title>
+            <mat-card-title *ngIf="videogoo">Edit Profile:</mat-card-title>
 
             <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
                 <div class="row">
@@ -32,8 +33,12 @@
                 <mat-form-field>
                     <textarea matInput placeholder="Biography" type="text" formControlName="bio"></textarea>
                 </mat-form-field>
-
-                <button mat-raised-button type="submit">Create User</button>
+                <div class="row">
+                    <div class="col-sm-12 justify-content-end">
+                        <button mat-raised-button [routerLink]="['../']">Cancel</button>
+                        <button mat-raised-button type="submit">{{ videogoo ? 'Save Edits' : 'Create User' }}</button>
+                    </div>
+                </div>
             </form>
         </mat-card>
     </div>
