--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -1,7 +1,10 @@
 <div class="container">
-    <div *ngIf="auth.can('patch:videographer')"class="row justify-content-end">
-        <div class="col-sm-2">
-            <a mat-raised-button routerLink="edit">Edit Profile</a>
+    <div *ngIf="auth.can('patch:videographer') || auth.can('delete:videographer')" class="row justify-content-center">
+        <div class="col-sm-12 col-md-10">
+            <mat-card>
+                <a mat-raised-button class="ml-auto" routerLink="edit">Edit Portfolio</a>
+                <a mat-raised-button class="ml-auto" (click)="deletePortfolio()" >Delete Portfolio</a>
+            </mat-card>
         </div>
     </div>
     <div class="row justify-content-center">
