--- a/src/app/pages/videographer-list/videographer-list.component.html
+++ b/src/app/pages/videographer-list/videographer-list.component.html
@@ -22,7 +22,7 @@
                         <p matLine routerLink="{{getLink(vg)}}">
                             <span>{{vg.location}}</span>
                         </p>
-                        <mat-icon *ngIf="auth.can('post:videographer')" (click)="deletePortfolio(vg.id, i)" aria-hidden="false"
+                        <mat-icon *ngIf="auth.can('delete:videographer')" (click)="deletePortfolio(vg.id, i)" aria-hidden="false"
                             aria-label="Example delete icon">delete</mat-icon>
                     </mat-list-item>
                 </mat-list>
