--- a/src/app/pages/videographer-list/videographer-list.component.html
+++ b/src/app/pages/videographer-list/videographer-list.component.html
@@ -14,6 +14,10 @@
                 </mat-card-title>
             </mat-card-header>
             <mat-card-content>
+                <div class="row justify-content-center" *ngIf="loading">
+                    <mat-spinner></mat-spinner>
+                </div>
+                <ng-container *ngIf="!loading">
                 <mat-tab-group *ngIf="auth.can('post:videographer')">
                     <mat-tab label="Your Portfolios"> 
                     <mat-list>
@@ -55,9 +59,8 @@
                             aria-label="Example delete icon">delete</mat-icon>
                     </mat-list-item>
                 </mat-list>
-                <div class="row justify-content-center" *ngIf="!videographers">
-                    <mat-spinner></mat-spinner>
-                </div>
+
+            </ng-container>
             </mat-card-content>
         </mat-card>
     </div>
