--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,21 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" routerLink="/">Videographers</a>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item" *ngIf="auth.can('post:videographer')" routerLink="/edit-profile">
-          <a class="nav-link">Add Profile</a>
+      <li class="nav-item" *ngIf="auth.activeJWT()">
+        <a class="nav-link" routerLink="/your-portfolio">Your Portfolio</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" *ngIf="!auth.activeJWT()" [href]="loginURL">Login</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" *ngIf="auth.activeJWT()" (click)="auth.logout()">Log Out</a>
-        </li>
+        <a class="nav-link" *ngIf="auth.activeJWT()" (click)="auth.logout()">Log Out</a>
+      </li>
     </ul>
   </div>
 </nav>
-  
