--- a/src/app/pages/add-video/add-video.component.html
+++ b/src/app/pages/add-video/add-video.component.html
@@ -1,8 +1,9 @@
 <div class="row justify-content-center" *ngIf="videoForm">
-        <div class="col-sm-10">
-            <mat-card>
-                <mat-card-title>Add a Video to {{videogooName}}'s Portfolio:</mat-card-title>
-    
+    <div class="col-sm-10">
+        <mat-card>
+            <mat-card-content *ngIf="!uploading">
+                <mat-card-title>Add a Video to your Portfolio:</mat-card-title>
+
                 <form [formGroup]="videoForm" (ngSubmit)="onSubmit()">
                     <div class="row">
                         <div class="col-sm-6">
@@ -18,11 +19,16 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <mat-form-field>
-                                <input matInput placeholder="Youtube URL" type="text" formControlName="url">
-                            </mat-form-field>
+                            <button mat-raised-button color="primary" (click)="selectVideo($event)">Select Video</button>
+                            <ng-container *ngIf="file">
+                                <span>{{file.name}}</span>
+                                <button mat-icon-button color="primary" (click)="removeVideo($event)">
+                                    <mat-icon>close</mat-icon>
+                                </button>
+                            </ng-container>
                         </div>
                     </div>
+                    
                     <div class="row">
                         <div class="col-sm-12 justify-content-end">
                             <button mat-raised-button [routerLink]="['../..']">Cancel</button>
@@ -30,6 +36,13 @@
                         </div>
                     </div>
                 </form>
-            </mat-card>
-        </div>
+            </mat-card-content>
+            <mat-card-content *ngIf="uploading">
+                    <mat-card-title>Uploading {{file.name}}...</mat-card-title>
+                    <mat-spinner></mat-spinner>
+            </mat-card-content>
+        </mat-card>
     </div>
+</div>
+
+<input #fileDialogue #fileUpload type="file" (change)="onVideoSelect($event)" class="hide">
