--- a/src/app/pages/videographer-list/videographer-list.component.html
+++ b/src/app/pages/videographer-list/videographer-list.component.html
@@ -13,11 +13,11 @@
                     <mat-spinner></mat-spinner>
                 </div>
                 <mat-list *ngIf="!loading">
-                    <mat-list-item *ngFor="let vg of videographers; let i = index" class="pointer">
-                        <img routerLink="{{getLink(vg)}}" matListAvatar src="{{ vg.pictureUrl}}"
+                    <mat-list-item *ngFor="let vg of videographers; let i = index" class="pointer"  routerLink="{{getLink(vg)}}">
+                        <img matListAvatar src="{{ vg.pictureUrl}}"
                             alt="{{vg.firstName + ' ' + vg.lastName}}">
-                        <h3 routerLink="{{getLink(vg)}}" matLine> {{vg.firstName + ' ' + vg.lastName}} </h3>
-                        <p matLine routerLink="{{getLink(vg)}}">
+                        <h2 matLine class="bold"> {{vg.firstName + ' ' + vg.lastName}} </h2>
+                        <p matLine>
                             <span>{{vg.location}}</span>
                         </p>
 
