--- a/src/app/pages/add-video/add-video.component.html
+++ b/src/app/pages/add-video/add-video.component.html
@@ -31,7 +31,7 @@
                     
                     <div class="row">
                         <div class="col-sm-12 justify-content-end">
-                            <button mat-raised-button [routerLink]="['../..']">Cancel</button>
+                            <button mat-raised-button [routerLink]="['../']">Cancel</button>
                             <button mat-raised-button type="submit">Add Video</button>
                         </div>
                     </div>
