--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -29,20 +29,24 @@
                         <div class="col-sm-12 col-md-9">
                             {{videographer.bio || null}}
                         </div>
-                    </div>
+                        </div>
                 </mat-card-content>
                 <mat-card-footer>
-                    <form [formGroup]="emailForm" (ngSubmit)="subscribe()">
-                        <div class="row">
-                            <div class="col-sm-3">
-                                <mat-form-field>
-                                    <input matInput placeholder="Your Email" type="text" formControlName="email">
-                                </mat-form-field>
+                    <div class="container">
+                        <form [formGroup]="emailForm" (ngSubmit)="subscribe()">
+                            <div class="row">
+                                <div class="col-sm-3 offset-md-3">
+                                    <mat-form-field>
+                                        <input matInput placeholder="Your Email" type="text" formControlName="email">
+                                    </mat-form-field>
+                                </div>
+                                <div class="col-sm-6">
+                                    <button type="button" class="btn btn-outline-primary">Subscribe to
+                                        Portfolio</button>
+                                </div>
                             </div>
-                            <button mat-raised-button type="submit">Subscribe to Portfolio</button>
-                        </div>
-                    </form>
-                
+                        </form>
+                    </div>
                 </mat-card-footer>
             </mat-card>
 
