--- a/src/styles.css
+++ b/src/styles.css
@@ -1,30 +1,37 @@
-@import '../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+html, body {
+  height: 100%;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-.pointer{
-    cursor: pointer;
+.pointer {
+  cursor: pointer;
 }
 
 .mat-button-base {
-    margin: 5px !important;
+  margin: 5px !important;
 }
 
 mat-card {
-    margin-bottom: 15px;
-    margin-top: 15px;
-    width: 100%;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  width: 100%;
 }
 
 mat-form-field {
-    width: 100%;
+  width: 100%;
 }
 
 .hide {
-    display:none;
-  }
+  display: none;
+}
 
 .bold {
-    font-weight: bold !important;
+  font-weight: bold !important;
 }
+
+/*# sourceMappingURL=styles.css.map */
