--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item" *ngIf="auth.activeJWT()">
-        <a class="nav-link" routerLink="/your-portfolio">Your Portfolio</a>
+        <a class="nav-link" routerLink="your-portfolio">Your Portfolio</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" *ngIf="!auth.activeJWT()" [href]="loginURL">Login</a>
