--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -41,7 +41,7 @@
                                     </mat-form-field>
                                 </div>
                                 <div class="col-sm-6">
-                                    <button type="button" class="btn btn-outline-primary">Subscribe to
+                                    <button type="button" class="btn btn-primary">Subscribe to
                                         Portfolio</button>
                                 </div>
                             </div>
