--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -33,19 +33,22 @@
                 </mat-card-content>
                 <mat-card-footer>
                     <div class="container">
-                        <form [formGroup]="emailForm" (ngSubmit)="subscribe()">
+                        <form [formGroup]="emailForm" (ngSubmit)="subscribeToPortfolio()" *ngIf="!subscribed">
                             <div class="row">
-                                <div class="col-sm-3 offset-md-3">
+                                <div class="col-12 col-sm-6 col-md-5 offset-md-3">
                                     <mat-form-field>
                                         <input matInput placeholder="Your Email" type="text" formControlName="email">
                                     </mat-form-field>
                                 </div>
-                                <div class="col-sm-6">
-                                    <button type="button" class="btn btn-primary">Subscribe to
-                                        Portfolio</button>
+                                <div class="col-12 col-sm-6 col-md-4">
+                                    <button type="button" class="btn btn-primary" (click)="subscribeToPortfolio()">Subscribe to Portfolio</button>
                                 </div>
                             </div>
                         </form>
+
+                        <div *ngIf="subscribed">
+                            To finish subscription, please check for an AWS email to verify your email address.
+                        </div>
                     </div>
                 </mat-card-footer>
             </mat-card>
