--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -11,6 +11,10 @@
         <a class="nav-link" routerLink="your-portfolio">Your Portfolio</a>
       </li>
       <li class="nav-item">
+          <a class="nav-link" *ngIf="!auth.activeJWT()" [href]="loginURL">Sign Up
+          </a>
+        </li>
+      <li class="nav-item">
         <a class="nav-link" *ngIf="!auth.activeJWT()" [href]="loginURL">Login</a>
       </li>
       <li class="nav-item">
@@ -19,3 +23,4 @@
     </ul>
   </div>
 </nav>
+
