--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -45,6 +45,9 @@
                         <button mat-raised-button type="submit">{{ videogoo ? 'Save Edits' : 'Create User' }}</button>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-sm-12">* Might take a couple minutes for updates to take effect *</div>
+                </div>
             </form>
         </mat-card>
     </div>
