logout links returns to reel-people

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -11,14 +11,10 @@
         <a class="nav-link" routerLink="your-portfolio">Your Portfolio</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" *ngIf="!auth.activeJWT()" id="login" (click)="login()">Sign Up
-          </a>
-        </li>
-      <li class="nav-item">
-        <a class="nav-link" *ngIf="!auth.activeJWT()" [href]="loginURL">Login</a>
+        <a class="nav-link" *ngIf="!auth.activeJWT()" [href]="loginURL">Sign Up / Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" *ngIf="auth.activeJWT()" (click)="auth.logout()">Log Out</a>
+        <a class="nav-link" *ngIf="auth.activeJWT()" [href]="logoutLink">Log Out</a>
       </li>
     </ul>
   </div>
