--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -13,23 +13,30 @@
         <div class="col-sm-12 col-md-10">
             <mat-card>
                 <mat-card-content>
+                     <img class="cover-photo" *ngIf="videographer.pictureUrl" src="https://inspirationfeed.com/wp-content/uploads/2017/03/Man-Picking-up-gopro-camera-on-tripod-1.jpg"
+                    alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}"/>
                     <div class="row">
-                        <div class="col-sm-12 col-md-3">
-                            <mat-list-item>
-                                <h3 matLine> {{ videographer.firstName || null }} {{videographer.lastName || null}}
-                                </h3>
-                                <p matLine>
-                                    <span> {{videographer.location || null}} </span>
-                                </p>
-                            </mat-list-item>
                             <img *ngIf="videographer.pictureUrl" [src]="videographer.pictureUrl"
-                                alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}"
-                                class="avatar" />
+                                alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}" class="avatar" />
+                        <div class="col-sm-8 col-md-8">
+                            <div class="container d-flex h-100">
+                                    <div class="row justify-content-center align-self-center">
+                                        <mat-list-item>
+                                                <h3 matLine> {{ videographer.firstName || null }} {{videographer.lastName || null}}
+                                                </h3>
+                                                <p matLine>
+                                                    <span> {{videographer.location || null}} </span>
+                                                </p>
+                                            </mat-list-item>                                    </div>
+                                </div>
+                          
                         </div>
-                        <div class="col-sm-12 col-md-9">
-                            {{videographer.bio || null}}
-                        </div>
-                        </div>
+                    </div>
+                    <div class="row">
+                            <div class="col-sm-12">
+                                    {{videographer.bio || null}}
+                            </div>
+                    </div>
                 </mat-card-content>
                 <mat-card-footer>
                     <div class="container">
