--- a/src/app/pages/portfolio/portfolio.component.scss
+++ b/src/app/pages/portfolio/portfolio.component.scss
@@ -1,7 +1,16 @@
-.avatar {
+img.avatar {
     object-fit: cover;
     vertical-align: middle;
-    width: 120px;
-    height: 120px;
+    width: 140px;
+    height: 140px;
     border-radius: 50%;
+    margin: 20px;
   }
+
+.cover-photo {
+  width: 100%;
+  height: 400px;
+  background-size: cover;
+  border: 1px solid black;
+  border-radius: 5px;
+}
