--- a/src/app/pages/portfolio/portfolio.component.scss
+++ b/src/app/pages/portfolio/portfolio.component.scss
@@ -9,8 +9,10 @@ img.avatar {
 
 .cover-photo {
   width: 100%;
-  height: 400px;
+  height: 35vh;
   background-size: cover;
   border: 1px solid black;
   border-radius: 5px;
+  background-repeat: no-repeat;
+  background-position-y: 34%;
 }
