--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -16,7 +16,7 @@
                     <div class="cover-photo" *ngIf="videographer.pictureUrl" style="background-image: url(https://inspirationfeed.com/wp-content/uploads/2017/03/Man-Picking-up-gopro-camera-on-tripod-1.jpg)"></div>
                      <!-- <img class="cover-photo" 
                     alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}"/> -->
-                    <div class="row">
+                    <div class="row profile-details-row">
                             <img *ngIf="videographer.pictureUrl" [src]="videographer.pictureUrl"
                                 alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}" class="avatar" />
                         <div class="col-sm-8 col-md-8">
