--- a/src/app/pages/portfolio/portfolio.component.html
+++ b/src/app/pages/portfolio/portfolio.component.html
@@ -14,27 +14,27 @@
             <mat-card>
                 <mat-card-content>
                     <div class="cover-photo" *ngIf="videographer.pictureUrl" style="background-image: url(https://inspirationfeed.com/wp-content/uploads/2017/03/Man-Picking-up-gopro-camera-on-tripod-1.jpg)"></div>
-                     <!-- <img class="cover-photo" 
-                    alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}"/> -->
                     <div class="row profile-details-row">
-                            <img *ngIf="videographer.pictureUrl" [src]="videographer.pictureUrl"
+                              <img *ngIf="videographer.pictureUrl" [src]="videographer.pictureUrl"
                                 alt="{{videographer.firstName || null}}  {{videographer.lastName || null}}" class="avatar" />
-                        <div class="col-sm-8 col-md-8">
+
+                        <div class="col-sm-6 col-lg-8">
                             <div class="container d-flex h-100">
-                                    <div class="row justify-content-center align-self-center">
+                                    <div class="row name-location-row justify-content-center align-self-center">
                                         <mat-list-item>
                                                 <h3 matLine> {{ videographer.firstName || null }} {{videographer.lastName || null}}
                                                 </h3>
                                                 <p matLine>
                                                     <span> {{videographer.location || null}} </span>
                                                 </p>
-                                            </mat-list-item>                                    </div>
+                                            </mat-list-item>                                    
+                                        </div>
                                 </div>
                           
                         </div>
                     </div>
                     <div class="row">
-                            <div class="col-sm-12">
+                            <div class="offset-sm-2 col-sm-8">
                                     {{videographer.bio || null}}
                             </div>
                     </div>
