--- a/src/app/pages/portfolio/portfolio.component.scss
+++ b/src/app/pages/portfolio/portfolio.component.scss
@@ -1,8 +1,8 @@
 img.avatar {
     object-fit: cover;
     vertical-align: middle;
-    width: 140px;
-    height: 140px;
+    width: 200px;
+    height: 200px;
     border-radius: 50%;
     margin: 20px;
     border: 5px solid white;
@@ -20,5 +20,15 @@ img.avatar {
 }
 
 .profile-details-row {
-  margin-top: -50px;
+  margin-top: -75px;
+}
+
+.profile-details-row .name-location-row {
+  margin-top: 20px;
+}
+
+@media only screen and (max-width: 575px) {
+  .profile-details-row .name-location-row {
+    margin-top: -10px;
+  }
 }
