route users to create-profile page on sign up, add videos to front page, log users out on 403 error'

--- a/src/app/pages/videographer-list/videographer-list.component.html
+++ b/src/app/pages/videographer-list/videographer-list.component.html
@@ -24,5 +24,32 @@
                 </mat-list>
             </mat-card-content>
         </mat-card>
+
+        <ng-container *ngIf="videos">
+                <ng-container *ngFor="let vd of videos">
+                    <mat-card>
+                        <mat-card-title>
+                            {{vd.title}}
+                        </mat-card-title>
+                        <mat-card-content>
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <video controls="true" class="embed-responsive-item">
+                                    <source src="{{vd.url}}" type="video/mp4" />
+                                </video>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-10 offset-md-1">
+                                    {{vd.description}}
+                                </div>
+                            </div>
+                        </mat-card-content>
+                        <mat-card-footer *ngIf="videographer && videographer.id === auth.activeUserId()">
+                            <a mat-raised-button class="mr-auto" routerLink="{{'videos/' + vd.id + '/edit'}}">Edit
+                                Video</a>
+                            <a mat-raised-button class="mr-auto" (click)="removeVideo(vd, $event)">Remove Video</a>
+                        </mat-card-footer>
+                    </mat-card>
+                </ng-container>
+            </ng-container>
     </div>
 </div>
