--- a/src/app/pages/edit-profile/edit-profile.component.html
+++ b/src/app/pages/edit-profile/edit-profile.component.html
@@ -1,10 +1,12 @@
 <div class="row justify-content-center" *ngIf="profileForm">
     <div class="col-sm-10">
         <mat-card>
-            <mat-card-title *ngIf="!videogoo">Create a Profile:</mat-card-title>
+            <mat-card-title *ngIf="!videogoo">Finish your profile:</mat-card-title>
             <mat-card-title *ngIf="videogoo">Edit Profile:</mat-card-title>
-
-            <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+            <div class="row justify-content-center" *ngIf="loading">
+                    <mat-spinner></mat-spinner>
+                </div>
+            <form *ngIf="!loading" [formGroup]="profileForm" (ngSubmit)="onSubmit()">
                 <div class="row">
                     <div class="col-sm-6">
                         <mat-form-field>
@@ -42,7 +44,7 @@
                 <div class="row">
                     <div class="col-sm-12 justify-content-end">
                         <button mat-raised-button [routerLink]="['../']">Cancel</button>
-                        <button mat-raised-button type="submit">{{ videogoo ? 'Save Edits' : 'Create User' }}</button>
+                        <button mat-raised-button type="submit">{{ videogoo ? 'Save Edits' : 'Update Profile'  }}</button>
                     </div>
                 </div>
                 <div class="row">
