--- a/src/app/pages/create-profile/create-profile.component.html
+++ b/src/app/pages/create-profile/create-profile.component.html
@@ -55,7 +55,7 @@
                     </mat-form-field>
                     <div class="row">
                         <div class="col-sm-12 justify-content-end">
-                            <button mat-raised-button (click)="auth.logoutLink()">Cancel Profile</button>
+                            <button mat-raised-button (click)="authService.logoutLink()">Cancel Profile</button>
                             <button mat-raised-button type="submit">Create Profile</button>
                         </div>
                     </div>
